<resources>
    <string name="app_name">Young\'s Diary</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="note">Note</string>
    <string name="add">Add</string>
    <string name="todo">TODO</string>
    <string name="schedule">Schedule</string>
    <string name="title">YOUNG\'S \n DIARY</string>
    <string name="clear_event">Clear Event</string>
    <string name="about">About</string>
    <string name="preference">Preference</string>
    <string name="tag">Tag</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="to"> TO </string>
    <string name="january">JAN</string>
    <string name="february">FEB</string>
    <string name="march">MAR</string>
    <string name="april">APR</string>
    <string name="may">MAY</string>
    <string name="june">JUN</string>
    <string name="july">JUL</string>
    <string name="august">AUG</string>
    <string name="september">SEP</string>
    <string name="october">OCT</string>
    <string name="november">NOV</string>
    <string name="december">DEC</string>
    <string name="icon_spinner_prompt">Select Icon</string>
    <string name="repeat">Repeat</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="duration">Duration</string>
    <string name="set_week_days">Set Week Days</string>
    <string name="set_days">Set Days</string>
    <string name="set_date">Set Date</string>
    <string name="set_by_date_and_time">Set By Date And Time</string>
    <string name="set_by_repeat">Set By Repeat</string>
    <string name="repeat_type">Repeat Type</string>
</resources>
