<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nerdsnulls.youngsdiary.SetByDateAndTimeFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/start_date"
        android:id="@+id/startDateEdit"
        android:focusableInTouchMode="false"
        android:clickable="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/end_date"
        android:id="@+id/endDateEdit"
        android:focusableInTouchMode="false"
        android:clickable="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/start_time"
        android:id="@+id/startTimeEdit"
        android:focusableInTouchMode="false"
        android:clickable="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/end_time"
        android:id="@+id/endTimeEdit"
        android:focusableInTouchMode="false"
        android:clickable="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="50dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok"
            android:id="@+id/okButton"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/cancelButton"/>
    </LinearLayout>

</LinearLayout>
