<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nerdsnulls.youngsdiary.SetRepeatTypeFragment"
    android:weightSum="8">

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/daily"
        android:id="@+id/setDailyRepeatButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/weekly"
        android:id="@+id/setWeeklyRepeatButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/monthly"
        android:id="@+id/setMonthlyRepeatButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/yearly"
        android:id="@+id/setYearlyRepeatButton"/>

</LinearLayout>
