<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.nerdsnulls.youngsdiary.WeekFragment"
    android:background="@drawable/section_border">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/section_border">

            <RelativeLayout
                android:id="@+id/previous"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentLeft="true" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/arrow_left" />
            </RelativeLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dip"
                android:textColor="#000000"
                android:textSize="18dip"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/next"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentRight="true" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/arrow_right" />
            </RelativeLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/section_border">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weekHeader">
                <TextView   android:layout_width="0dp" android:layout_height="75dp" android:layout_weight="1" android:background="@drawable/table_border" android:gravity="center"
                    android:textStyle="bold" />
                <TextView   android:layout_width="0dp" android:layout_height="75dp" android:layout_weight="1" android:background="@drawable/table_border" android:gravity="center"
                    android:text="@string/sunday" android:textColor="#000000" android:textStyle="bold" />
                <TextView   android:layout_width="0dp" android:layout_height="75dp" android:layout_weight="1" android:background="@drawable/table_border" android:gravity="center"
                    android:text="@string/monday" android:textColor="#000000" android:textStyle="bold" />
                <TextView   android:layout_width="0dp" android:layout_height="75dp" android:layout_weight="1" android:background="@drawable/table_border" android:gravity="center"
                    android:text="@string/tuesday" android:textColor="#000000" android:textStyle="bold" />
                <TextView   android:layout_width="0dp" android:layout_height="75dp" android:layout_weight="1" android:background="@drawable/table_border" android:gravity="center"
                    android:text="@string/wednesday" android:textColor="#000000" android:textStyle="bold" />
                <TextView   android:layout_width="0dp" android:layout_height="75dp" android:layout_weight="1" android:background="@drawable/table_border" android:gravity="center"
                    android:text="@string/thursday" android:textColor="#000000" android:textStyle="bold" />
                <TextView   android:layout_width="0dp" android:layout_height="75dp" android:layout_weight="1" android:background="@drawable/table_border" android:gravity="center"
                    android:text="@string/friday" android:textColor="#000000" android:textStyle="bold" />
                <TextView   android:layout_width="0dp" android:layout_height="75dp" android:layout_weight="1" android:background="@drawable/table_border" android:gravity="center"
                    android:text="@string/saturday" android:textColor="#000000" android:textStyle="bold" />
            </TableRow>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">
                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/weekTable">
                </TableLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/button_list"/>
</LinearLayout>

